--- a/settings.gradle
+++ b/settings.gradle
@@ -18,6 +18,6 @@ if (gradle.ext.has('exoplayerModulePrefix')) {
     modulePrefix += gradle.ext.exoplayerModulePrefix
 }
 
-rootProject.name = 'media3'
+//rootProject.name = 'media3'
 
 apply from: 'core_settings.gradle'
