--- a/extensions/ima/build.gradle
+++ b/extensions/ima/build.gradle
@@ -31,22 +31,22 @@ dependencies {
     compileOnly 'com.google.errorprone:error_prone_annotations:' + errorProneVersion
     compileOnly 'org.checkerframework:checker-qual:' + checkerframeworkVersion
     compileOnly 'org.jetbrains.kotlin:kotlin-annotations-jvm:' + kotlinAnnotationsVersion
-    androidTestImplementation project(modulePrefix + 'testutils')
-    androidTestImplementation 'androidx.multidex:multidex:' + androidxMultidexVersion
-    androidTestImplementation 'androidx.test:rules:' + androidxTestRulesVersion
-    androidTestImplementation 'androidx.test:runner:' + androidxTestRunnerVersion
-    androidTestCompileOnly 'org.checkerframework:checker-qual:' + checkerframeworkVersion
-    testImplementation project(modulePrefix + 'testutils')
-    testImplementation 'org.robolectric:robolectric:' + robolectricVersion
+//    androidTestImplementation project(modulePrefix + 'testutils')
+//    androidTestImplementation 'androidx.multidex:multidex:' + androidxMultidexVersion
+//    androidTestImplementation 'androidx.test:rules:' + androidxTestRulesVersion
+//    androidTestImplementation 'androidx.test:runner:' + androidxTestRunnerVersion
+//    androidTestCompileOnly 'org.checkerframework:checker-qual:' + checkerframeworkVersion
+//    testImplementation project(modulePrefix + 'testutils')
+//    testImplementation 'org.robolectric:robolectric:' + robolectricVersion
 }
 
-ext {
-    javadocTitle = 'IMA extension'
-}
-apply from: '../../javadoc_library.gradle'
+//ext {
+//    javadocTitle = 'IMA extension'
+//}
+//apply from: '../../javadoc_library.gradle'
 
 ext {
     releaseArtifactId = 'extension-ima'
     releaseDescription = 'Interactive Media Ads extension for ExoPlayer.'
 }
-apply from: '../../publish.gradle'
+//apply from: '../../publish.gradle'
